css/5th.css
/* ===== Google Font Import - Poformsins ===== */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");

body{
 background-color: #f0f0f0;   
}
.card{
    background-color: white;
}
.card .card_heading{
    text-transform: uppercase;
    color: rgb(158, 158, 158);
    font-size: 16px;
}
.mono{
    height: 100%;
    max-width: 80px;
    width: 100%;
}
.mono img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}
.card-header{
    padding-top: 20px;
    background-color: transparent;
    border-bottom: none;
}
.product_image{
    height: 60px;
    width: 80px;
}
.product_image img{
    height: 100%;
    width: 100%;
}
.product_name{
    color: black;
    text-decoration: none;
    margin-left: 5px;
}
.product_name:hover{
    color: black;
    text-decoration: underline;
}
.card-body table{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.card-body table th , .card-body table td{
    height: 24px;
    display: block;
}
.card-body.product_card table thead th h6{
    color: #b4b4b4;
    font-size: 13px;
    text-transform: uppercase;
}
.card-body table tbody tr{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}
.product_card table thead th h6{
    text-transform: uppercase !important;
    font-weight: lighter;
    font-size: 13px;
}
.payment_info table thead th h6{
    color: rgb(151, 151, 151);
    font-weight: lighter;
    text-transform: uppercase !important;

}
.payment_info table thead th:last-child h6{
    color: rgb(97, 97, 97);
    font-weight: bold;
    margin-bottom: 0;
}
.payment_info table tbody td:last-child{
    color: rgb(97, 97, 97);
    font-weight: bold;
}
.payment_info .card-body table th , .payment_info .card-body table td{
    height: 30px;
}
.card-body thead , .card-body tr , .card-body td{
    width: 100%;
}

